# rnd-stuff

./: .bashrc  .emacs  .emacs.desktop  .emacs.old  .xinitrc  AgdaLike.hs  Associativity.agda  Binary.agda  Bot.hs  Commutativity.agda  Equality.agda  GADTs.hs  Implication.hs  Lambda.agda  Lists.agda  Odd+Odd=Even.agda  OddsAndEvens.agda  OddsAndEvens.hs  OddsAndEvens3.agda  README.md  Writing.hs  configuration.nix  droid.nix  multiline_hello.py  update_configs.sh
.config/i3/: config
.config/i3status/: config
.config/termite/: config
agda/: CanOne.agda  Inequality.agda  OddsAndEvens2.agda  PainfulNat.agda  atoms.agda  group.agda  iso.agda  maybe-monoid.agda
haskell/: Lambda.hs  rnd-stuff.cabal
haskell/src/: .#Set.hs  Lambda.hs  Main.hs  Parser.hs  Set.hs
nix/: configuration.nix
other/: .bashrc  .emacs
py/: multiline_hello.py
st/: config.h
