cabal-version:       >=1.10
name:                rnd-stuff
version:             0.1.0.0
license-file:        LICENSE
author:              freedan42x
maintainer:          danil123550@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable haskell
  main-is:             Main.hs
  other-modules:       Lambda
                     , Parser
  default-extensions:  LambdaCase
                     , RankNTypes
                     , TemplateHaskell
                     , QuasiQuotes
                     , DataKinds
                     , GADTs
                     , TypeFamilies
                     , UnicodeSyntax
                     , ConstrainedClassMethods
                     , MultiParamTypeClasses
                     , FlexibleInstances
                     , PolyKinds
                     , RecordWildCards
  build-depends:       base >=4.12 && <4.13
                     , neat-interpolation == 0.5.1.1
                     , text == 1.2.3.1
  hs-source-dirs:      src
  default-language:    Haskell2010
